--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Contracts to enable decentralized oracle infrastructure for Juri nodes",
   "main": "index.js",
   "scripts": {
+    "deploy:skale": "bash scripts/deployToSkale.sh",
     "test": "bash scripts/run_test.sh"
   },
   "repository": {
@@ -26,10 +27,12 @@
     "eslint": "^6.2.2",
     "eslint-config-prettier": "^6.1.0",
     "eslint-plugin-prettier": "^3.1.0",
+    "ethereumjs-tx": "^2.1.1",
     "heap": "^0.2.6",
     "prettier": "^1.18.2",
-    "truffle": "^5.0.34",
-    "truffle-hdwallet-provider": "^1.0.17"
+    "truffle": "^5.0.37",
+    "truffle-hdwallet-provider": "^1.0.17",
+    "truffle-plugin-verify": "^0.3.3"
   },
   "dependencies": {
     "openzeppelin-test-helpers": "^0.3.2"
